--- a/mysite/web_cn/templates/history.html
+++ b/mysite/web_cn/templates/history.html
@@ -130,12 +130,12 @@
         {% for row in results %}
             <tr>
                 <td>{{ row.0 }}</td>
-                <td>{{ row.3 }}</td>
-                <td>{{ row.2 }}</td>
                 <td>{{ row.1 }}</td>
+                <td>{{ row.2 }}</td>
+                <td>{{ row.3 }}</td>
                 <td>{{ row.4 }}</td>
                 <td>{{ row.5 }}</td>
-                <td><a href="media/{{ row.6 }}" target="_blank">{{ row.6 }}</a></td>
+                <td><a href="/media/{{ row.6 }}" target="_blank">{{ row.6 }}</a></td>
             </tr>
         {% endfor %}
         <tr class="count-row">
